# signetai

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  VISION.md  package.json  repo.map.yaml  turbo.json
.github/: pull_request_template.md
docs/: ACP-INTEGRATION.md  API.md  ARCHITECTURE.md  AUTH.md  CLI.md  CONFIGURATION.md  CONNECTORS.md  CONTRIBUTING.md  DAEMON.md  DASHBOARD.md  MCP.md  (+17 more)
platform/daemon-rs/: Cargo.toml
platform/daemon-rs/contracts/: parity-rules.json  route-parity.json  schema.sql
platform/daemon-rs/contracts/replay-corpus/: MANIFEST.md  manifest.json
platform/daemon-rs/contracts/replay-corpus/cases/: auth-api-key-create-list.json  auth-api-key-create-list.seed.sql  memory-recall-agent-visibility-scope.json  memory-recall-agent-visibility-scope.seed.sql  memory-remember-idempotency-dedupe.json  memory-remember-idempotency-dedupe.seed.sql
platform/daemon-rs/crates/signet-core/benches/: recall.rs
platform/daemon-rs/crates/signet-core/src/: config.rs  constants.rs  db.rs  migrations.rs  search.rs  types.rs
platform/daemon-rs/crates/signet-core/src/queries/: embedding.rs  entity.rs  memory.rs
platform/daemon-rs/crates/signet-core/src/sql/: 024-predictor-comparison-columns.sql  040-memory-search-telemetry.sql  041-ontology-proposals.sql  042-entity-aliases.sql  043-mcp-invocations.sql  044-dreaming-state.sql  045-agents-table.sql  046-cross-agent-runtime.sql  047-daily-reflections.sql  048-entity-communities.sql  049-memory-hints.sql  050-path-feedback.sql  051-epistemic-assertions.sql  052-session-context-dedupe.sql  053-aggregate-memory-links.sql  054-temporal-edges.sql  055-thread-heads.sql  056-entity-fts.sql  057-session-summary-uniqueness.sql  058-skill-invocations-harness.sql
platform/daemon-rs/crates/signet-core/tests/: embedding_upsert.rs  migrations.rs  misc_parity.rs  recall_parity.rs
platform/daemon-rs/crates/signet-daemon/: Cargo.toml
platform/daemon-rs/crates/signet-daemon/benches/: http_recall.rs
platform/daemon-rs/crates/signet-daemon/src/: analytics.rs  cors.rs  main.rs  routes.rs  state.rs  watcher.rs  workspace_paths.rs
platform/daemon-rs/crates/signet-daemon/src/auth/: api_keys.rs  middleware.rs  mod.rs  password.rs  policy.rs  rate_limiter.rs  tokens.rs  types.rs
platform/daemon-rs/crates/signet-daemon/src/mcp/: protocol.rs  tools.rs  transport.rs
platform/daemon-rs/crates/signet-daemon/src/routes/: agents.rs  auth.rs  changelog.rs  config.rs  connectors.rs  crossagent.rs  diagnostics.rs  documents.rs  dream.rs  git.rs  graphiq.rs  harnesses.rs  hooks.rs  inference.rs  knowledge.rs  marketplace.rs  marketplace_reviews.rs  memory.rs  memory_embeddings.rs  ontology.rs  os.rs  pipeline.rs  plugins.rs  reflections.rs  repair.rs  scheduler.rs  search.rs  secrets.rs  sessions.rs  skill_analytics.rs  skills.rs  sources.rs  telemetry.rs  write.rs
platform/daemon-rs/crates/signet-daemon/tests/: contract_replay.rs  contract_replay_fixtures.rs  misc_routes_parity.rs  routes_tail.rs  runtime_tail.rs  tail_routes_parity.rs
platform/daemon-rs/crates/signet-pipeline/: Cargo.toml
platform/daemon-rs/crates/signet-pipeline/benches/: throughput.rs
platform/daemon-rs/crates/signet-pipeline/src/: aggregate_recall.rs  antonyms.rs  contradiction.rs  decision.rs  document.rs  dreaming.rs  dreaming_worker.rs  embedding_tracker.rs  entity_quality.rs  extraction.rs  graph_transactions.rs  graph_traversal.rs  identity_context.rs  lib.rs  maintenance.rs  memory_ingest_filter.rs  memory_lineage.rs  model_registry.rs  native_memory_sources.rs  path_feedback.rs  prompt_text.rs  prospective_index.rs  provider.rs  reflection_worker.rs  retention.rs  session_memories.rs  significance_gate.rs  single_flight.rs  skill_enrichment.rs  skill_reconciler.rs  source_index_progress.rs  stop_words.rs  structural.rs  structural_features.rs  structured_evidence.rs  summary.rs  synthesis.rs  temporal_expand.rs  watcher_ignore.rs  worker.rs  (+1 more)
platform/daemon-rs/crates/signet-pipeline/tests/: aggregate_recall_parity.rs  embedding_synthesis.rs  memory_lineage.rs  native_sources_parity.rs  path_feedback_parity.rs  pipeline_misc.rs  pipeline_tail.rs  prompt_contradiction.rs  prospective_model.rs  recall_ports.rs  retention.rs  retention_ports.rs  single_flight.rs  skill_modules.rs  skills_parity.rs  sources_parity.rs  sources_tail.rs  structured_evidence_parity.rs  temporal_expand.rs  worker_ports.rs
platform/daemon-rs/crates/signet-services/src/: graph.rs  normalize.rs  session.rs  transactions.rs
platform/daemon-rs/crates/signet-services/tests/: scoping_parity.rs
platform/daemon-rs/crates/signet-shadow/: Cargo.toml
platform/daemon-rs/crates/signet-shadow/src/: compare.rs  divergence.rs  main.rs  snapshot.rs
platform/daemon-rs/parity/: 00-correspondence-map.md  01-route-inventory.md  02-behavioral-cores.md  03-test-corpus-manifest.md  04-replay-harness-audit.md
platform/daemon-rs/scripts/: cutover.sh  generate-rust-replay-corpus.ts  shadow-replay.sh
platform/native/: Cargo.toml  package.json
(+733 files in other folders)
