[workspace]
resolver = "2"
members = [
    "crates/signet-core",
    "crates/signet-services",
    "crates/signet-pipeline",
    "crates/signet-daemon",
    "crates/signet-mcp-stdio",
    "crates/signet-shadow",
    "spike",
]

[workspace.package]
version = "0.128.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Signet-AI/signetai"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Database
rusqlite = { version = "0.32", features = ["bundled", "blob", "functions", "vtab"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Crypto
xsalsa20poly1305 = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Auth
jsonwebtoken = "9"

# File watching
notify = "7"

# MCP
# rmcp = "0.1"  # TODO: evaluate when ready

# Hashing
blake3 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Lock-free config
arc-swap = "1"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
getrandom = "0.3"
regex-lite = "0.1"
bytes = "1"
tiktoken-rs = "0.9.1"

# Internal crates
signet-core = { path = "crates/signet-core" }
signet-services = { path = "crates/signet-services" }
signet-pipeline = { path = "crates/signet-pipeline" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
