[package]
name = "signet-native"
version = "0.145.0"
edition = "2021"
license = "Apache-2.0"
description = "Signet native accelerators (napi-rs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
sha2 = "0.10"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
