[package]
name = "signet-daemon"
version.workspace = true
edition.workspace = true
description = "Signet daemon: HTTP API, MCP server, file watcher, pipeline"

[[bin]]
name = "signet-daemon"
path = "src/main.rs"

[[bench]]
name = "http_recall"
harness = false

[dependencies]
signet-core = { workspace = true }
signet-services = { workspace = true }
signet-pipeline = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tower = { workspace = true }
tower-http = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
getrandom = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
libc = "0.2"
notify = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
