[package]
name = "signet-pipeline"
version.workspace = true
edition.workspace = true
description = "LLM providers, embedding providers, workers, predictor, extraction"

[dependencies]
signet-core = { workspace = true }
signet-services = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
libc = "0.2"
tiktoken-rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
