[package]
name = "signet-shadow"
version.workspace = true
edition.workspace = true
description = "Shadow replay proxy for validating Rust daemon against TS daemon"

[[bin]]
name = "signet-shadow"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
regex-lite = { workspace = true }
bytes = { workspace = true }
rusqlite = { workspace = true }
